UI and Art update
I have now updated the UI and the PNG files, as well as adding the lat and lon to the recent stations, satisfying three of the four criteria of the project

--- a/public/css/sytles.css
+++ b/public/css/sytles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0 auto;
     padding: 1em 0;
+    background-color: gray;
 }
 
 #mapid { 
@@ -10,8 +11,11 @@ body {
 header,
 aside,
 footer {
-    background-color: lightblue;
+    background-color: #c8a2c8;
     padding: 1em;
+    border-radius: 17px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 header, footer {
